# TTFHW-MindSpeed-MM

./: OWNERS  README.md  Third-Party Open Source Software Notice.txt  evaluate_gen.py  evaluate_vlm.py  inference_qihoo.py  inference_sora.py  inference_videoalign.py  inference_vlm.py  posttrain_flux_dancegrpo.py  posttrain_qwen2vl_dpo.py  posttrain_sora_dpo.py  pretrain_ae.py  pretrain_deepseekvl.py  pretrain_internvl.py  pretrain_lumina.py  pretrain_omni.py  pretrain_qwen2vl.py  pretrain_sora.py  pretrain_transformers.py  pretrain_videoalign.py  pretrain_vlm.py  pretrain_whisper.py  pyproject.toml
.gitcode/: PULL_REQUEST_TEMPLATE.md
UserGuide/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
UserGuide/_static/: width.css
UserGuide/api/: data.rst  model.rst  overview.rst  pretrain.rst
UserGuide/config/: fsdp2配置.rst  工具配置.rst  数据配置.rst  模型配置.rst  环境变量.rst  训练参数.rst  配置概览.rst
UserGuide/dev_guide/: 新模型开发.rst  框架结构介绍.rst  模型迁移.rst
UserGuide/faq/: 常见问题.rst
UserGuide/features/: RingAttention.rst  USP(混合并行, Unified SP).rst  async-offload.rst  fsdp2.rst  hetero-parallel.rst  online-data-balance.rst  sequence-parallel.rst  tensor-parallel.rst  tp-sp.rst  ulysses.rst  权重转换.rst  特性总览.rst
UserGuide/quick_start/: Qwen3VL-30B-MoE模型微调实践.rst  Wan2.2模型微调实践.rst  快速实践.rst  环境搭建.rst
UserGuide/tuning/: 性能调优.rst  显存调优.rst  调优案例.rst
build-verification/: verification_report.json
checkpoint/: __init__.py  convert_cli.py
ci/: access_control_test.py  generate_st_baseline.py  run_ci.sh
docker/: Dockerfile  OVERVIEW.md  OVERVIEW.zh.md  build.sh
examples/diffusers/flux2/: README.md  bf16_accelerate_config.yaml  finetune_i2i_flux2_dreambooth_lora_fsdp_bf16.sh  finetune_t2i_flux2_dreambooth_lora_fsdp_bf16.sh  infer_flux2_img2img.py  infer_flux2_text2img.py  install.sh  pyproject.toml  setup.py  transformer_patches.py
examples/diffusers/flux2/src/flux2_patch/: __init__.py
examples/mindspore/checkpoint/: convert_cli.py  pyproject.toml
mindspeed_mm/: __init__.py  arguments.py  training.py
scripts/: install.sh  install_cann.sh  replace_ascend_path.py
tests/: README.md
verl_plugin/: README.md  setup.py
(+1067 files in other folders)
